# F1_robotarm

./: README.md
Reinforce/: .gitignore  README.md  Wok.stl  pyproject.toml
Reinforce/assets/pan/: README.md
Reinforce/assets/robot/: README.md
Reinforce/configs/: default.yaml  fried_rice.yaml  test.yaml  user.yaml.example
Reinforce/scripts/: calibrate_particle_bounce.py  smoke_test.sh
Reinforce/src/wok_sim/: __init__.py  cli.py  config.py
Reinforce/src/wok_sim/envs/: __init__.py  wok_mixing_env.py
Reinforce/src/wok_sim/exploration/: __init__.py  random_walk.py
Reinforce/src/wok_sim/geometry/: __init__.py  pan_asset.py  transforms.py
Reinforce/src/wok_sim/logging/: __init__.py  episode_logger.py
Reinforce/src/wok_sim/metrics/: __init__.py  flight.py  mixing.py  spill.py  trajectory_cost.py
Reinforce/src/wok_sim/robot/: __init__.py  base.py  exporter.py  m0609_motion_contract.py  m0609_validator.py
Reinforce/src/wok_sim/simulation/: __init__.py  contact_events.py  model_builder.py  pan_model.py  particle_generator.py  rebound.py  simulator.py
Reinforce/tests/: test_config_and_asset.py  test_env.py  test_export.py  test_flight_metric.py  test_frame_transforms.py  test_fried_rice_env_training.py  test_fried_rice_particles.py  test_fried_rice_trajectory.py  test_m0609_motion_contract.py  test_mixing_metric.py  test_particle_mass.py  test_robot_validator.py  test_spill_metric.py  test_training_logging.py  test_trajectory_continuity.py  test_trajectory_cost.py  test_trajectory_geometry.py  test_trajectory_validation.py
UI/: README.md  app.py  food.db  (+1 more)
(+14 files in other folders)
