[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "wok-sim"
version = "0.1.0"
description = "Open-loop wok trajectory optimization with MuJoCo and contextual SAC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "F1 Robot Arm Team" }]
dependencies = [
  "gymnasium>=1.0,<2",
  "mujoco>=3.2,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "PyYAML>=6.0,<7",
  "scipy>=1.11,<2",
  "stable-baselines3>=2.4,<3",
  "trimesh>=4.4,<5",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
robot = ["pin>=2.7,<4"]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
wok-sim = "wok_sim.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wok_sim"]

[tool.pytest.ini_options]
# ROS가 system Python에 등록한 pytest plugin이 격리된 3.11 환경으로
# 자동 유입되지 않도록 명시적으로 차단한다.
addopts = "-ra -p no:ament_pep257 -p no:ament_lint -p no:launch_testing -p no:launch_ros -p no:ament_copyright -p no:ament_flake8 -p no:ament_xmllint"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Typer의 표준 Option default 선언 패턴
